# Engram

./: .env.example  .gitignore  API_USAGE_GUIDE.md  CODEBASE_WALKTHROUGH.md  DOCUMENTATION_INDEX.md  QUICK_REFERENCE.md  README.md  SWAGGER_UI_GUIDE.md  TESTING_GUIDE.md  VISUAL_GUIDE.md  docker-compose.yml  openapi.json  openapi.yaml  pyproject.toml  requirements.txt
demo/: Engram-Final-Presentation.pptx  agents.py  demo_presentation.py  run_demo.py
demo/ui/: app.js  index.html
engram/: __init__.py  access_control.py  api.py  crdt.py  history.py  middleware.py  models.py  vector_clock.py
engram/storage/: __init__.py  base.py  chroma_adapter.py  memory.py  pinecone_adapter.py  redis_adapter.py
tests/: conftest.py  test_access_control.py  test_api.py  test_crdt.py  test_e2e_budget_conflict.py  test_history.py  test_redis.py  test_storage.py  test_vector_clock.py
